fix tests ellipse et fix drawingcomponent html z-index du background layer pour permettre le resize

--- a/client/src/app/components/drawing/drawing.component.scss
+++ b/client/src/app/components/drawing/drawing.component.scss
@@ -1,6 +1,6 @@
 #backgroundLayer {
     border :none;
-    z-index: 1;
+    z-index: 0;
 }
 
 canvas {
